--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -1,5 +1,5 @@
-@NPSInput-Value-color:       rgb(254, 181, 203);
-@NPSInput-Value-hover-color: rgb(255, 73, 129);
+@NPSInput-Value-color:       #f2f5fd;
+@NPSInput-Value-hover-color: #3884ff;
 @NPSInput-Value-size:        32px;
 @NPSInput-Value-padding:     3px;
 @NPSInput-Value-width:       ((@NPSInput-Value-size + 2*@NPSInput-Value-padding)*11);
