Fix release script

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -31,6 +31,11 @@
         padding: 0.5em 1em;
         text-decoration: none;
         border: 0;
+        opacity: 0.4;
+
+        &:hover {
+            opacity: 1;
+        }
     }
 
     .NPSInput-Inner {
