--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -13,6 +13,11 @@
     background: #fff;
     box-shadow: 0px -10px 10px rgba(200, 200, 200, 0.08);
 
+    &.animated {
+        animation-duration: 2s;
+        animation-name: NPSInput-slidein;
+    }
+
     .NPSInput-Close {
         position: absolute;
         top: 10px;
@@ -106,4 +111,14 @@
         margin-bottom: 15px;
         font-size: 16px;
     }
+}
+
+@keyframes NPSInput-slidein {
+  from {
+    bottom: -100%;
+  }
+
+  to {
+    bottom: 0px;
+  }
 }
